tests/negative_fixtures/number_array_with_string.shx
let numbers: number[] = [1, 2, "three", 4];
console.log(numbers);
